--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           </li>
 
           <li class="social-item">
-            <a href="https://linkedin.com/in/[your-linkedin]" class="social-link" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a href="https://linkedin.com/in/shreevathsa-v" class="social-link" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
           </li>
 
           <li class="social-item">
